@@ -6,35 +6,37 @@
 	
 	<artifactId>mrprez</artifactId>
 	<groupId>com.mrprez</groupId>
-	<version>1.3-SNAPSHOT</version>
+	<version>1.5-SNAPSHOT</version>
 	
+	<!-- test push 2 -->
+
 	<scm>
 		<connection>scm:git:git://github.com/mrprez/mrprez.git</connection>
-		<developerConnection>scm:git:https://github.com/mrprez/mrprez.git</developerConnection>
+		<developerConnection>scm:git:git@github.com:mrprez/mrprez.git</developerConnection>
 	  <tag>HEAD</tag>
   </scm>
 	
 	<repositories>
 		<repository>
 			<id>MrPrezDeployRepo</id>
-			<url>http://localhost:8080/nexus/content/repositories/releases/</url>
+			<url>http://www.mrprez.fr/nexus/content/repositories/releases/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 		<repository>
 			<id>MrPrezDeploySnapshot</id>
-			<url>http://localhost:8080/nexus/content/repositories/snapshots/</url>
+			<url>http://www.mrprez.fr/nexus/content/repositories/snapshots/</url>
 		</repository>
 		<repository>
 			<id>MrPrezThirdParty</id>
-			<url>http://localhost:8080/nexus/content/repositories/thirdparty/</url>
+			<url>http://www.mrprez.fr/nexus/content/repositories/thirdparty/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>MrPrezPluginRepo</id>
-			<url>http://localhost:8080/nexus/content/repositories/releases/</url>
+			<url>http://www.mrprez.fr/nexus/content/repositories/releases/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -43,27 +45,37 @@
 	<distributionManagement>
 		<repository>
 			<id>MrPrezDeployRepo</id>
-			<url>http://mrprez.fr/nexus/content/repositories/releases/</url>
+			<url>http://www.mrprez.fr/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>MrPrezDeploySnapshot</id>
-			<url>http://mrprez.fr/nexus/content/repositories/snapshots/</url>
+			<url>http://www.mrprez.fr/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 	
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-		</plugins>	
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.5.1</version>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.17</version>
+					<configuration>
+						<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	
 	
